--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -75,7 +75,7 @@ https://templatemo.com/tm-516-known
   }
 
   a {
-    color: #252525;
+    color: #C34E56;
     -webkit-transition: 0.5s;
     transition: 0.5s;
     text-decoration: none !important;
