--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -89,7 +89,7 @@ https://templatemo.com/tm-516-known
   }
 
   a:hover, a:active, a:focus {
-    color: #599795;
+    color: #C34E56;
     outline: none;
   }
 
